tests/binary/errors/data_non_bytes.dby
import std.binary as bin

print(bin.u8("not bytes", 0))
